--- a/app/src/main/res/layout/custom_review_dialog.xml
+++ b/app/src/main/res/layout/custom_review_dialog.xml
@@ -34,7 +34,7 @@
         android:rating="4"
         android:theme="@style/RatingBarTheme"
         app:layout_constraintStart_toStartOf="@+id/txt_dialog_name"
-        app:layout_constraintTop_toBottomOf="@+id/textView11" />
+        app:layout_constraintTop_toBottomOf="@+id/txt_coupon_date" />
 
     <TextView
         android:id="@+id/txt_dialog_name"
@@ -49,7 +49,7 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
-        android:id="@+id/textView11"
+        android:id="@+id/txt_coupon_date"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:fontFamily="@font/gotham_font"
