--- a/app/src/main/res/layout/activity_view_category.xml
+++ b/app/src/main/res/layout/activity_view_category.xml
@@ -23,6 +23,29 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
+        <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
+            android:id="@+id/swipeNoInternet"
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:clickable="true"
+            android:elevation="@dimen/sb_size_10"
+            android:focusable="true"
+            android:visibility="gone"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/toolbar">
+
+            <androidx.constraintlayout.widget.ConstraintLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent">
+
+                <include layout="@layout/no_internet_connected" />
+
+            </androidx.constraintlayout.widget.ConstraintLayout>
+
+        </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
+
         <LinearLayout
             android:id="@+id/llFilterLayout"
             android:layout_width="match_parent"
@@ -146,7 +169,7 @@
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/llFilterLayout">
+            app:layout_constraintTop_toBottomOf="@id/llFilterLayout">
 
             <androidx.constraintlayout.widget.ConstraintLayout
                 android:layout_width="match_parent"
@@ -269,6 +292,19 @@
 
                 </LinearLayout>
 
+                <!--Dummy layout for identify click into the empty space
+                    so that we can close the dialogs -->
+                <LinearLayout
+                    android:id="@+id/llDummyLayout"
+                    android:layout_width="match_parent"
+                    android:layout_height="0dp"
+                    android:background="@color/transparent"
+                    android:elevation="@dimen/sb_size_4"
+                    android:orientation="vertical"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toTopOf="parent" />
 
                 <androidx.recyclerview.widget.RecyclerView
                     android:id="@+id/rvViewCategory"
@@ -347,7 +383,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginStart="@dimen/sb_size_10"
-                    android:orientation="vertical"/>
+                    android:orientation="vertical" />
 
                 <View
                     android:layout_width="0dp"
@@ -368,7 +404,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginStart="@dimen/sb_size_10"
-                    android:orientation="vertical"/>
+                    android:orientation="vertical" />
 
                 <View
                     android:layout_width="0dp"
@@ -462,10 +498,10 @@
         <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="?attr/actionBarSize"
+            android:layout_gravity="bottom"
             android:background="@color/grey_50"
             android:elevation="2dp"
-            android:paddingVertical="@dimen/sb_size_4"
-            android:layout_gravity="bottom">
+            android:paddingVertical="@dimen/sb_size_4">
 
             <Button
                 android:id="@+id/btClearAllFilter"
