--- a/app/src/main/res/layout/item_container_new.xml
+++ b/app/src/main/res/layout/item_container_new.xml
@@ -33,6 +33,7 @@
             android:layout_marginStart="8dp"
             android:layout_marginTop="@dimen/sb_size_36"
             android:layout_marginEnd="8dp"
+            android:clickable="false"
             android:ellipsize="end"
             android:singleLine="true"
             android:text="New In Dresses"
@@ -54,6 +55,7 @@
             android:layout_marginEnd="8dp"
             android:layout_marginBottom="@dimen/sb_text_size_28"
             android:background="@color/white"
+            android:clickable="false"
             android:ellipsize="end"
             android:paddingStart="@dimen/sb_size_22"
             android:paddingTop="@dimen/sb_size_4"
@@ -64,8 +66,8 @@
             android:textColor="@color/grey_700"
             android:textSize="@dimen/sb_text_size_12"
             android:visibility="invisible"
-            app:layout_constraintBottom_toBottomOf="parent"
 
+            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/new_text_view"
