--- a/app/src/main/res/layout/activity_settings.xml
+++ b/app/src/main/res/layout/activity_settings.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -21,7 +21,7 @@
     <ScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_marginTop="@dimen/sb_size_60"
+        android:layout_below="@id/toolbar"
         android:background="@color/grey_200"
         android:fillViewport="true"
         app:layout_constraintTop_toBottomOf="@+id/toolbar">
@@ -36,9 +36,9 @@
                 android:id="@+id/idLinearLayout"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="@dimen/sb_size_10"
                 android:background="@color/white"
                 android:orientation="vertical"
+                android:layout_marginBottom="@dimen/sb_size_10"
                 android:paddingHorizontal="@dimen/sb_size_25"
                 android:paddingVertical="@dimen/sb_text_size_18">
 
@@ -63,10 +63,8 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="@dimen/sb_size_10"
                 android:background="@color/white"
-                android:orientation="vertical"
-                android:paddingVertical="@dimen/sb_size_5">
+                android:orientation="vertical">
 
                 <TextView
                     android:id="@+id/addressBookTextView"
@@ -303,4 +301,4 @@
         </LinearLayout>
     </ScrollView>
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+</RelativeLayout>
