views ripple effect

--- a/app/src/main/res/layout/custom_review_dialog.xml
+++ b/app/src/main/res/layout/custom_review_dialog.xml
@@ -38,11 +38,11 @@
 
     <TextView
         android:id="@+id/txt_dialog_name"
+        style="@style/BoldBlackText"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:fontFamily="@font/gotham_font"
         android:text="David Park"
-        style="@style/BoldBlackText"
         android:textColor="@color/black"
         android:textSize="@dimen/sb_text_size_14"
         app:layout_constraintStart_toStartOf="parent"
@@ -64,7 +64,11 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_margin="@dimen/sb_size_12"
+        android:background="?attr/selectableItemBackground"
+        android:clickable="true"
+        android:focusable="true"
         android:fontFamily="@font/gotham_font"
+        android:padding="@dimen/sb_size_4"
         android:text="@string/submit"
         android:textColor="@color/black"
         android:textSize="@dimen/sb_text_size_10"
@@ -76,7 +80,11 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_margin="@dimen/sb_size_12"
+        android:background="?attr/selectableItemBackground"
+        android:clickable="true"
+        android:focusable="true"
         android:fontFamily="@font/gotham_font"
+        android:padding="@dimen/sb_size_4"
         android:text="@string/cancel"
         android:textColor="@color/red_800"
         android:textSize="@dimen/sb_text_size_10"
