--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -59,7 +59,10 @@
                         android:id="@+id/img_coupons"
                         android:layout_width="30dp"
                         android:layout_height="30dp"
+                        android:background="?attr/selectableItemBackgroundBorderless"
+                        android:clickable="true"
                         android:contentDescription="@string/coupons"
+                        android:focusable="true"
                         android:src="@drawable/ic_coupons"
                         app:layout_constraintBottom_toBottomOf="parent"
                         app:layout_constraintEnd_toEndOf="parent"
@@ -93,7 +96,10 @@
                         android:id="@+id/img_points"
                         android:layout_width="30dp"
                         android:layout_height="30dp"
+                        android:background="?attr/selectableItemBackgroundBorderless"
+                        android:clickable="true"
                         android:contentDescription="@string/points"
+                        android:focusable="true"
                         android:src="@drawable/ic_points"
                         app:layout_constraintBottom_toBottomOf="parent"
                         app:layout_constraintEnd_toEndOf="parent"
@@ -126,7 +132,10 @@
                         android:id="@+id/img_wallet"
                         android:layout_width="30dp"
                         android:layout_height="30dp"
+                        android:background="?attr/selectableItemBackgroundBorderless"
+                        android:clickable="true"
                         android:contentDescription="@string/wallet"
+                        android:focusable="true"
                         android:src="@drawable/ic_wallet"
                         app:layout_constraintBottom_toBottomOf="parent"
                         app:layout_constraintEnd_toEndOf="parent"
@@ -159,7 +168,10 @@
                         android:id="@+id/img_gift_card"
                         android:layout_width="30dp"
                         android:layout_height="30dp"
+                        android:background="?attr/selectableItemBackgroundBorderless"
+                        android:clickable="true"
                         android:contentDescription="@string/gift_card"
+                        android:focusable="true"
                         android:src="@drawable/ic_gift_card"
                         app:layout_constraintBottom_toBottomOf="parent"
                         app:layout_constraintEnd_toEndOf="parent"
@@ -231,7 +243,10 @@
                         android:id="@+id/img_unpaid"
                         android:layout_width="30dp"
                         android:layout_height="30dp"
+                        android:background="?attr/selectableItemBackgroundBorderless"
+                        android:clickable="true"
                         android:contentDescription="@string/unpaid"
+                        android:focusable="true"
                         android:src="@drawable/ic_unpaid"
                         app:layout_constraintBottom_toBottomOf="parent"
                         app:layout_constraintEnd_toEndOf="parent"
@@ -264,7 +279,10 @@
                         android:id="@+id/img_processing"
                         android:layout_width="30dp"
                         android:layout_height="30dp"
+                        android:background="?attr/selectableItemBackgroundBorderless"
+                        android:clickable="true"
                         android:contentDescription="@string/processing"
+                        android:focusable="true"
                         android:src="@drawable/ic_processing"
                         app:layout_constraintBottom_toBottomOf="parent"
                         app:layout_constraintEnd_toEndOf="parent"
@@ -297,7 +315,10 @@
                         android:id="@+id/img_shipped"
                         android:layout_width="30dp"
                         android:layout_height="30dp"
+                        android:background="?attr/selectableItemBackgroundBorderless"
+                        android:clickable="true"
                         android:contentDescription="@string/shipping"
+                        android:focusable="true"
                         android:src="@drawable/ic_shipping"
                         app:layout_constraintBottom_toBottomOf="parent"
                         app:layout_constraintEnd_toEndOf="parent"
@@ -330,7 +351,10 @@
                         android:id="@+id/img_returns"
                         android:layout_width="30dp"
                         android:layout_height="30dp"
+                        android:background="?attr/selectableItemBackgroundBorderless"
+                        android:clickable="true"
                         android:contentDescription="@string/returns"
+                        android:focusable="true"
                         android:src="@drawable/ic_returns"
                         app:layout_constraintBottom_toBottomOf="parent"
                         app:layout_constraintEnd_toEndOf="parent"
@@ -402,7 +426,10 @@
                         android:id="@+id/img_support"
                         android:layout_width="30dp"
                         android:layout_height="30dp"
+                        android:background="?attr/selectableItemBackgroundBorderless"
+                        android:clickable="true"
                         android:contentDescription="@string/support"
+                        android:focusable="true"
                         android:src="@drawable/ic_support"
                         app:layout_constraintBottom_toBottomOf="parent"
                         app:layout_constraintEnd_toEndOf="parent"
@@ -435,7 +462,10 @@
                         android:id="@+id/img_share_earn"
                         android:layout_width="30dp"
                         android:layout_height="30dp"
+                        android:background="?attr/selectableItemBackgroundBorderless"
+                        android:clickable="true"
                         android:contentDescription="@string/share_and_earn"
+                        android:focusable="true"
                         android:src="@drawable/ic_share"
                         app:layout_constraintBottom_toBottomOf="parent"
                         app:layout_constraintEnd_toEndOf="parent"
@@ -468,7 +498,10 @@
                         android:id="@+id/img_my_reference"
                         android:layout_width="30dp"
                         android:layout_height="30dp"
+                        android:background="?attr/selectableItemBackgroundBorderless"
+                        android:clickable="true"
                         android:contentDescription="@string/my_reference"
+                        android:focusable="true"
                         android:src="@drawable/ic_reference"
                         app:layout_constraintBottom_toBottomOf="parent"
                         app:layout_constraintEnd_toEndOf="parent"
