--- a/app/src/main/res/layout/item_orders_details.xml
+++ b/app/src/main/res/layout/item_orders_details.xml
@@ -11,7 +11,10 @@
         android:layout_height="120dp"
         android:layout_marginTop="@dimen/sb_size_8"
         android:layout_marginBottom="@dimen/sb_size_8"
+        android:background="?attr/selectableItemBackgroundBorderless"
+        android:clickable="true"
         android:contentDescription="@string/order_image"
+        android:focusable="true"
         android:scaleType="centerCrop"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
