--- a/app/src/main/res/layout/item_recommendation.xml
+++ b/app/src/main/res/layout/item_recommendation.xml
@@ -10,7 +10,10 @@
         android:id="@+id/img_recommended_product"
         android:layout_width="@dimen/sb_size_60"
         android:layout_height="@dimen/sb_size_90"
+        android:background="?attr/selectableItemBackgroundBorderless"
+        android:clickable="true"
         android:contentDescription="@string/recommended_product"
+        android:focusable="true"
         android:scaleType="centerCrop"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
