--- a/app/src/main/res/layout/item_wishlist_activity.xml
+++ b/app/src/main/res/layout/item_wishlist_activity.xml
@@ -10,7 +10,10 @@
         android:layout_width="110dp"
         android:layout_height="150dp"
         android:layout_marginTop="@dimen/sb_size_8"
+        android:background="?attr/selectableItemBackgroundBorderless"
+        android:clickable="true"
         android:contentDescription="@string/wish_list_image"
+        android:focusable="true"
         android:scaleType="centerCrop"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
