--- a/app/src/main/res/layout/fragment_wish_list.xml
+++ b/app/src/main/res/layout/fragment_wish_list.xml
@@ -28,6 +28,9 @@
         android:text="@string/view_more"
         android:textColor="@color/black"
         android:textSize="@dimen/sb_text_size_16"
+        android:background="?attr/selectableItemBackground"
+        android:clickable="true"
+        android:focusable="true"
         android:visibility="visible"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
