--- a/app/src/main/res/layout/item_container_new.xml
+++ b/app/src/main/res/layout/item_container_new.xml
@@ -17,7 +17,10 @@
             android:id="@+id/background_image"
             android:layout_width="@dimen/sb_size_0"
             android:layout_height="@dimen/sb_size_0"
+            android:background="?attr/selectableItemBackground"
+            android:clickable="true"
             android:contentDescription="@string/new_arrivals"
+            android:focusable="true"
             android:scaleType="centerCrop"
             android:src="@color/blue_100"
             app:layout_constraintBottom_toBottomOf="parent"
