ui and icons checks

--- a/app/src/main/res/layout/item_view_category.xml
+++ b/app/src/main/res/layout/item_view_category.xml
@@ -7,9 +7,9 @@
     <ImageView
         android:id="@+id/imgProductImage"
         android:layout_width="match_parent"
-        android:layout_height="220dp"
-        android:layout_marginHorizontal="@dimen/sb_size_8"
-        android:layout_marginVertical="@dimen/sb_size_10"
+        android:layout_height="240dp"
+        android:layout_marginHorizontal="@dimen/sb_size_4"
+        android:layout_marginVertical="@dimen/sb_size_4"
         android:scaleType="centerCrop"
         android:background="@color/blue_grey_900"
         app:layout_constraintEnd_toEndOf="parent"
@@ -34,6 +34,8 @@
         android:text="₹ 1000"
         android:textColor="@color/blue_grey_900"
         android:textSize="@dimen/sb_text_size_16"
+        android:fontFamily="@font/gothamblack"
+
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="@+id/imgProductImage"
         app:layout_constraintStart_toStartOf="@+id/imgProductImage"
@@ -42,8 +44,8 @@
     <HorizontalScrollView
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="@dimen/sb_size_12"
-        android:layout_marginBottom="@dimen/sb_size_16"
+        android:layout_marginTop="@dimen/sb_size_6"
+        android:layout_marginBottom="@dimen/sb_size_12"
         android:scrollbars="none"
         android:padding="@dimen/sb_size_4"
         app:layout_constraintBottom_toBottomOf="parent"
