--- a/app/src/main/res/layout/activity_single_product.xml
+++ b/app/src/main/res/layout/activity_single_product.xml
@@ -66,6 +66,7 @@
                                 android:layout_height="300dp"
                                 android:layout_marginTop="@dimen/sb_size_10"
                                 app:layout_constraintEnd_toEndOf="parent"
+                                android:layout_marginBottom="4dp"
                                 app:layout_constraintStart_toStartOf="parent">
 
                             </androidx.viewpager.widget.ViewPager>
@@ -78,7 +79,9 @@
                                 android:layout_marginStart="@dimen/sb_size_20"
                                 android:layout_marginTop="@dimen/sb_size_20"
                                 android:textColor="@color/black"
-                                android:textSize="@dimen/sb_text_size_17" />
+                                android:textStyle="bold"
+                                android:fontFamily="@font/gothamblack"
+                                android:textSize="@dimen/sb_text_size_18" />
 
                             <TextView
                                 android:id="@+id/price"
@@ -95,7 +98,7 @@
                             <ImageButton
                                 android:id="@+id/share"
                                 android:layout_width="@dimen/sb_size_30"
-                                android:layout_height="@dimen/sb_size_30"
+                                android:layout_height="@dimen/sb_size_28"
                                 android:layout_below="@+id/viewpager"
                                 android:layout_alignParentEnd="true"
                                 android:layout_marginTop="@dimen/sb_size_10"
@@ -110,13 +113,14 @@
                                 android:layout_height="wrap_content"
                                 android:layout_below="@+id/share"
                                 android:layout_alignParentEnd="true"
-                                android:layout_marginTop="@dimen/sb_size_10"
+                                android:layout_marginTop="@dimen/sb_size_12"
                                 android:layout_marginEnd="@dimen/sb_size_20"
                                 android:isIndicator="true"
                                 android:numStars="5"
+                                android:stepSize="0.5"
                                 android:progressBackgroundTint="@color/grey_500"
                                 android:progressTint="#FFD700"
-                                android:rating="4.8"
+                                android:rating="4.5"
                                 android:secondaryProgressTint="@null" />
 
                             <TextView
@@ -127,6 +131,7 @@
                                 android:layout_marginStart="@dimen/sb_size_20"
                                 android:layout_marginTop="@dimen/sb_size_15"
                                 android:fontFamily="@font/gothambold"
+                                android:textStyle="bold"
                                 android:text="Color: Red"
                                 android:visibility="gone"
                                 android:textColor="@color/black"
@@ -148,6 +153,7 @@
                                 android:layout_marginStart="@dimen/sb_size_20"
                                 android:layout_marginTop="@dimen/sb_size_15"
                                 android:text="Size"
+                                android:textStyle="bold"
                                 android:textColor="@color/black"
                                 android:textSize="@dimen/sb_text_size_15" />
 
@@ -177,6 +183,8 @@
                                 android:layout_marginStart="@dimen/sb_size_20"
                                 android:layout_marginTop="@dimen/sb_size_15"
                                 android:text="Shipping to"
+                                android:textStyle="bold"
+                                android:fontFamily="@font/gothamblack"
                                 android:textColor="@color/black"
                                 android:textSize="@dimen/sb_text_size_16" />
 
@@ -208,6 +216,12 @@
                                     android:text="Free standard shipping"
                                     android:textColor="@color/black"
                                     app:drawableStartCompat="@drawable/ic_shipping_size" />
+
+
+                                <View
+                                    android:layout_width="match_parent"
+                                    android:layout_height="1dp"
+                                    android:background="#EEEEEE"/>
 
                                 <TextView
                                     android:layout_width="wrap_content"
@@ -262,6 +276,8 @@
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
                                 android:text="Reviews(3238)"
+                                android:fontFamily="@font/gothambold"
+                                android:textStyle="bold"
                                 android:textColor="@color/black" />
 
                             <TextView
@@ -269,9 +285,9 @@
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
                                 android:layout_alignParentEnd="true"
-                                android:text="view all"
+                                android:text="View All"
                                 android:textColor="@color/black"
-                                android:textStyle="bold" />
+                                android:fontFamily="@font/gothamblack" />
 
                             <androidx.cardview.widget.CardView
                                 android:id="@+id/cardView"
@@ -525,14 +541,17 @@
                         android:layout_height="@dimen/sb_size_35"
                         android:layout_gravity="center|start"
                         android:layout_marginEnd="@dimen/sb_size_10"
-                        android:background="@drawable/ic_favourites"
-                        android:scaleType="fitCenter" />
+
+                        android:background="@android:color/white"
+                        android:src="@drawable/ic_favourites"
+                        android:scaleType="centerCrop" />
 
                     <Button
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:background="@color/black"
                         android:text="Add to bag"
+                        android:fontFamily="@font/gothamblack"
                         android:textColor="@color/white"
                         android:textStyle="bold" />
 
