--- a/app/src/main/res/layout/activity_view_category.xml
+++ b/app/src/main/res/layout/activity_view_category.xml
@@ -19,6 +19,9 @@
             android:layout_height="?attr/actionBarSize"
             android:background="@color/white"
             android:elevation="8dp"
+            android:textAlignment="center"
+            android:gravity="center"
+            app:titleTextColor="@color/colorPrimary"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
@@ -75,6 +78,8 @@
                     android:gravity="center"
                     android:text="@string/sort"
                     android:textColor="@color/black"
+                    android:textStyle="bold"
+                    android:fontFamily="@font/gothamblack"
                     android:textSize="@dimen/sb_text_size_16"
                     android:visibility="visible" />
 
@@ -89,6 +94,14 @@
                     android:src="@drawable/ic_arrow_up" />
             </RelativeLayout>
 
+
+            <View
+                android:layout_width="1dp"
+                android:layout_height="match_parent"
+                android:background="#EEEEEE"
+
+                android:layout_marginBottom="1dp"
+                android:layout_marginTop="1dp"/>
             <!--<TextView
                 android:id="@+id/tvCategory"
                 android:layout_width="0dp"
@@ -102,6 +115,7 @@
 
             <RelativeLayout
                 android:id="@+id/rlCategory"
+                android:layout_marginStart="4dp"
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
                 android:layout_gravity="center"
@@ -117,6 +131,8 @@
                     android:text="@string/category"
                     android:textColor="@color/black"
                     android:textSize="@dimen/sb_text_size_16"
+                    android:textStyle="bold"
+                    android:fontFamily="@font/gothamblack"
                     android:visibility="visible" />
 
                 <ImageView
@@ -129,6 +145,14 @@
                     android:rotation="180"
                     android:src="@drawable/ic_arrow_up" />
             </RelativeLayout>
+
+
+            <View
+                android:layout_width="1dp"
+                android:layout_height="match_parent"
+                android:background="#EEEEEE"
+                android:layout_marginBottom="1dp"
+                android:layout_marginTop="1dp"/>
 
             <!--Filter -->
             <RelativeLayout
@@ -147,8 +171,10 @@
                     android:layout_height="wrap_content"
                     android:gravity="center"
                     android:paddingTop="@dimen/sb_size_4"
-                    android:paddingEnd="@dimen/sb_size_16"
+                    android:paddingEnd="@dimen/sb_size_8"
                     android:text="@string/filter"
+                    android:fontFamily="@font/gothamblack"
+                    android:textStyle="bold"
                     android:textColor="@color/black"
                     android:textSize="@dimen/sb_text_size_16" />
 
@@ -157,6 +183,7 @@
                     android:layout_height="@dimen/sb_size_22"
                     android:layout_marginTop="4dp"
                     android:layout_toEndOf="@+id/tvDummyFilter"
+                     android:padding="2dp"
                     android:src="@drawable/ic_filter" />
             </RelativeLayout>
 
