--- a/app/src/main/res/layout/layout_image_single_product.xml
+++ b/app/src/main/res/layout/layout_image_single_product.xml
@@ -3,6 +3,7 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
+
     android:layout_height="wrap_content">
 
     <ImageView
@@ -10,6 +11,9 @@
         android:layout_width="match_parent"
         android:layout_height="300dp"
         app:layout_constraintBottom_toBottomOf="parent"
+        android:scaleType="fitXY"
+        android:layout_marginRight="4dp"
+        android:layout_marginLeft="4dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
