--- a/app/src/main/res/layout/layout_recyclerview_button.xml
+++ b/app/src/main/res/layout/layout_recyclerview_button.xml
@@ -3,23 +3,24 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="wrap_content"
-    android:padding="@dimen/sb_size_5"
+
     android:layout_height="wrap_content">
 
     <Button
         android:id="@+id/colorButton"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_height="30dp"
         android:layout_alignParentEnd="true"
         android:background="@drawable/rect_back_button"
-        android:paddingHorizontal="@dimen/sb_size_10"
+        android:paddingHorizontal="@dimen/sb_size_6"
         android:text="Red"
+        android:textSize="12sp"
         android:clickable="true"
         android:focusable="true"
-        android:layout_marginEnd="@dimen/sb_size_10"
+        android:layout_marginEnd="@dimen/sb_size_8"
         android:textStyle="bold"
         android:textColor="@color/black"
-        android:padding="@dimen/sb_size_10"
+        android:padding="@dimen/sb_size_2"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
