--- a/app/src/main/res/menu/menu_view_category.xml
+++ b/app/src/main/res/menu/menu_view_category.xml
@@ -4,14 +4,14 @@
 
     <item
         android:id="@+id/action_search"
-        android:icon="@drawable/ic_search"
+        android:icon="@drawable/ic_search_black"
         android:title="@string/search"
         app:actionViewClass="androidx.appcompat.widget.SearchView"
         app:showAsAction="always|collapseActionView" />
 
     <item
         android:id="@+id/action_cart"
-        android:icon="@drawable/ic_bag"
+        android:icon="@drawable/ic_baseline_shopping_cart_24"
         android:title="@string/cart"
         app:showAsAction="ifRoom" />
 
