--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -58,7 +58,7 @@
         <item name="fontFamily">@font/gotham_font</item>
     </style>
 
-    <style name="Theme.Ecommerce.Theme" parent="Theme.AppCompat.DayNight.NoActionBar">
+    <style name="Theme.Ecommerce.Theme" parent="Theme.AppCompat.Light.NoActionBar">
 
         <item name="colorPrimary">@color/white</item>
         <item name="colorPrimaryVariant">@color/black</item>
