--- a/app/src/main/res/layout/toolbar.xml
+++ b/app/src/main/res/layout/toolbar.xml
@@ -31,24 +31,30 @@
                     android:layout_width="27dp"
                     android:layout_height="wrap_content"
                     android:contentDescription="@string/desc_mail"
+                    android:background="?attr/selectableItemBackground"
+                    android:clickable="true"
+                    android:focusable="true"
                     android:scaleType="fitCenter"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toTopOf="parent"
-                    app:srcCompat="@drawable/ic_mail" />
+                    app:srcCompat="@drawable/ic_group" />
 
                 <ImageView
                     android:id="@+id/imgFavourites"
                     android:layout_width="@dimen/sb_size_25"
                     android:layout_height="wrap_content"
+                    android:background="?attr/selectableItemBackground"
+                    android:clickable="true"
+                    android:focusable="true"
                     android:layout_marginStart="@dimen/sb_size_14"
                     android:contentDescription="@string/desc_favourites"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintStart_toEndOf="@id/imgMail"
                     app:layout_constraintTop_toTopOf="parent"
-                    app:srcCompat="@drawable/ic_favourites" />
+                    app:srcCompat="@drawable/ic_wishlist_unselected" />
 
-                <TextView
+            <!--    <TextView
                     android:id="@+id/tvTitle"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
@@ -78,7 +84,7 @@
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toEndOf="@id/imgFavourites"
-                    app:layout_constraintTop_toTopOf="parent" />
+                    app:layout_constraintTop_toTopOf="parent" />-->
 
                 <!--Right side icon is not needed since they can be inflated with
                         onOptionMenuCreated -->
