--- a/app/src/main/res/menu/profile_fragment_menu.xml
+++ b/app/src/main/res/menu/profile_fragment_menu.xml
@@ -4,13 +4,13 @@
 
     <item
         android:id="@+id/menu_settings"
-        android:icon="@drawable/ic_settings"
+        android:icon="@drawable/ic_setting"
         android:title="@string/settings"
         app:showAsAction="always" />
 
     <item
         android:id="@+id/menu_cart"
-        android:icon="@drawable/ic_bag"
+        android:icon="@drawable/ic_cart"
         android:title="Bag"
         app:showAsAction="always" />
 
