minor changes and Crashlytics added

--- a/app/src/main/res/layout/item_wishlist.xml
+++ b/app/src/main/res/layout/item_wishlist.xml
@@ -23,7 +23,8 @@
             android:id="@+id/img_recently_viewed"
             android:layout_width="120dp"
             android:layout_height="165dp"
-            android:background="?attr/selectableItemBackgroundBorderless"
+            android:background="@null"
+            android:foreground="?android:attr/selectableItemBackground"
             android:clickable="true"
             android:contentDescription="@string/wish_list_image"
             android:focusable="true"
