--- a/app/src/main/res/layout/activity_all_product_category.xml
+++ b/app/src/main/res/layout/activity_all_product_category.xml
@@ -92,6 +92,17 @@
                         app:layout_constraintStart_toStartOf="parent"
                         app:layout_constraintTop_toTopOf="parent" />
 
+                    <ImageView
+                        android:id="@+id/imgClose"
+                        android:layout_width="@dimen/sb_size_24"
+                        android:layout_height="@dimen/sb_size_24"
+                        android:src="@drawable/ic_close"
+                        android:layout_marginEnd="@dimen/sb_size_16"
+                        app:layout_constraintBottom_toTopOf="@+id/separatorLine"
+                        app:layout_constraintEnd_toEndOf="parent"
+                        app:layout_constraintTop_toTopOf="@+id/tvFilterHeader"
+                        android:contentDescription="@string/close" />
+
                     <View
                         android:id="@+id/separatorLine"
                         android:layout_width="match_parent"
@@ -131,8 +142,8 @@
                                     android:paddingHorizontal="@dimen/sb_size_16"
                                     android:text="@string/category"
                                     android:textColor="@color/black"
-                                    android:textStyle="bold"
-                                    android:textSize="@dimen/sb_text_size_16" />
+                                    android:textSize="@dimen/sb_text_size_16"
+                                    android:textStyle="bold" />
 
                                 <TextView
                                     android:id="@+id/tvSize"
@@ -352,6 +363,7 @@
                                 android:id="@+id/tvFilterBy"
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
+                                android:visibility="gone"
                                 android:layout_marginTop="@dimen/sb_size_2"
                                 android:text="@string/no_filter_applied"
                                 android:textColor="@color/grey_900"
