--- a/app/src/main/res/layout/layout_bottom_sheet_productdesc.xml
+++ b/app/src/main/res/layout/layout_bottom_sheet_productdesc.xml
@@ -32,15 +32,28 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="@+id/verifyTextView" />
 
+    <TextView
+        android:id="@+id/description"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="@dimen/sb_size_15"
+        android:textColor="@color/black"
+        android:textSize="@dimen/sb_text_size_16"
+        android:padding="@dimen/sb_size_20"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/verifyTextView"/>
+
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recyclerView"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="@dimen/sb_size_40"
-        android:padding="@dimen/sb_size_20"
+        android:paddingVertical="@dimen/sb_size_10"
+        android:layout_marginTop="@dimen/sb_size_10"
+        android:paddingHorizontal="@dimen/sb_size_10"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/verifyTextView" />
+        app:layout_constraintTop_toBottomOf="@+id/description" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
