remote config updated & Random API implemented

--- a/app/src/main/res/layout/fragment_shop.xml
+++ b/app/src/main/res/layout/fragment_shop.xml
@@ -102,9 +102,8 @@
                 <androidx.recyclerview.widget.RecyclerView
                     android:id="@+id/rvTopProductSuggestion"
                     android:layout_width="match_parent"
-                    android:layout_height="210dp"
-                    android:layout_marginTop="@dimen/sb_size_8"
-                    android:maxHeight="240dp"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="@dimen/sb_size_10"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toBottomOf="@+id/imgNewArrival"
@@ -161,10 +160,10 @@
                     <ImageView
                         android:id="@+id/imgOffer1"
                         android:layout_width="0dp"
-                        android:layout_height="220dp"
-                        android:layout_marginVertical="@dimen/sb_size_10"
-                        android:layout_marginStart="@dimen/sb_size_20"
-                        android:layout_marginEnd="@dimen/sb_size_10"
+                        android:layout_height="250dp"
+                        android:layout_marginVertical="@dimen/sb_size_5"
+                        android:layout_marginStart="@dimen/sb_size_10"
+                        android:layout_marginEnd="@dimen/sb_size_5"
                         android:layout_weight="1"
                         android:background="@color/pink_500"
                         android:contentDescription="@string/desc_offer"
@@ -173,10 +172,10 @@
                     <ImageView
                         android:id="@+id/imgOffer2"
                         android:layout_width="0dp"
-                        android:layout_height="220dp"
-                        android:layout_marginVertical="@dimen/sb_size_10"
-                        android:layout_marginStart="@dimen/sb_size_10"
-                        android:layout_marginEnd="@dimen/sb_size_20"
+                        android:layout_height="250dp"
+                        android:layout_marginVertical="@dimen/sb_size_5"
+                        android:layout_marginStart="@dimen/sb_size_5"
+                        android:layout_marginEnd="@dimen/sb_size_10"
                         android:layout_weight="1"
                         android:background="@color/pink_500"
                         android:contentDescription="@string/desc_offer"
@@ -196,10 +195,10 @@
                     <ImageView
                         android:id="@+id/imgOffer3"
                         android:layout_width="0dp"
-                        android:layout_height="220dp"
-                        android:layout_marginVertical="@dimen/sb_size_10"
-                        android:layout_marginStart="@dimen/sb_size_20"
-                        android:layout_marginEnd="@dimen/sb_size_10"
+                        android:layout_height="250dp"
+                        android:layout_marginVertical="@dimen/sb_size_5"
+                        android:layout_marginStart="@dimen/sb_size_10"
+                        android:layout_marginEnd="@dimen/sb_size_5"
                         android:layout_weight="1"
                         android:background="@color/pink_500"
                         android:contentDescription="@string/desc_offer"
@@ -208,10 +207,10 @@
                     <ImageView
                         android:id="@+id/imgOffer4"
                         android:layout_width="0dp"
-                        android:layout_height="220dp"
-                        android:layout_marginVertical="@dimen/sb_size_10"
-                        android:layout_marginStart="@dimen/sb_size_10"
-                        android:layout_marginEnd="@dimen/sb_size_20"
+                        android:layout_height="250dp"
+                        android:layout_marginVertical="@dimen/sb_size_5"
+                        android:layout_marginStart="@dimen/sb_size_5"
+                        android:layout_marginEnd="@dimen/sb_size_10"
                         android:layout_weight="1"
                         android:background="@color/pink_500"
                         android:contentDescription="@string/desc_offer"
