--- a/app/src/main/res/layout/activity_all_product_category.xml
+++ b/app/src/main/res/layout/activity_all_product_category.xml
@@ -290,7 +290,7 @@
                             android:layout_width="@dimen/sb_size_24"
                             android:layout_height="@dimen/sb_size_24"
                             android:layout_gravity="center"
-                            android:src="@drawable/ic_filter" />
+                            android:src="@drawable/ic_sort" />
 
                         <LinearLayout
                             android:layout_width="wrap_content"
@@ -314,6 +314,7 @@
                                 android:layout_height="wrap_content"
                                 android:layout_marginTop="@dimen/sb_size_2"
                                 android:text=""
+                                android:visibility="gone"
                                 android:textColor="@color/grey_900"
                                 android:textSize="@dimen/sb_text_size_10" />
                         </LinearLayout>
